# kion-sizer

./: .dockerignore  LICENSE  README.md  pyproject.toml
scripts/: cloudshell.sh
src/kion_sizer/: cli.py  config.py  default.yaml  model.py  prices.json  pricing.py  profile.py  progress.py  rds_catalog.py  render.py
tests/: test_accounts.py  test_cli.py  test_cloudshell.sh  test_cloudshell_discovery.py  test_config.py  test_cost.py  test_env_fidelity.py  test_footers.py  test_golden.py  test_model.py  test_pricing.py  test_profile.py  test_progress.py  test_rds_catalog.py  test_render.py  test_s3.py  test_sample.py
tests/env/: Dockerfile.al2023  run.sh  run_env_test.sh
tests/golden/: bytes_accounts40.out  bytes_accounts40_json.out  bytes_accounts5000_json.out  bytes_json.out  csv_sampling_json.out  exceeds_tiers_json.out  no_source_error.out  read_footers_json.out
