[project]
name = "kion-sizer"
version = "0.1.0"
description = "Recommend AWS RDS + financials-poller ECS sizing for a Kion deployment from a customer's CUR."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "pyarrow>=15",
    "pyyaml>=6",
]

[project.scripts]
kion-sizer = "kion_sizer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kion_sizer"]

[tool.hatch.build.targets.wheel.force-include]
"src/kion_sizer/default.yaml" = "kion_sizer/default.yaml"
"src/kion_sizer/prices.json" = "kion_sizer/prices.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
